<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_add_expenses"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/menu_add_expenses" />
    <item
        android:id="@+id/nav_add_income"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/menu_add_income" />
    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_history" />
    <item
        android:id="@+id/nav_tips"
        android:icon="@drawable/ic_tips"
        android:title="@string/menu_tips" />
</menu>